core/tests/compile_fail/instruction_vec_alignment.stderr
warning: unexpected `cfg` condition value: `solana`
 --> tests/compile_fail/instruction_vec_alignment.rs:7:10
  |
7 | #[derive(Accounts)]
  |          ^^^^^^^^
  |
  = note: expected values for `target_os` are: `aix`, `amdhsa`, `android`, `cuda`, `cygwin`, `dragonfly`, `emscripten`, `espidf`, `freebsd`, `fuchsia`, `haiku`, `hermit`, `horizon`, `hurd`, `illumos`, `ios`, `l4re`, `linux`, `lynxos178`, `macos`, `managarm`, `netbsd`, `none`, `nto`, `nuttx`, `openbsd`, `psp`, `psx`, `redox`, `rtems`, `solaris`, `solid_asp3`, `teeos`, `trusty`, and `tvos` and 11 more
  = note: using a cfg inside a derive macro will use the cfgs from the destination crate and not the ones from the defining crate
  = help: try referring to `Accounts` crate for guidance on how handle this unexpected cfg
  = help: the derive macro `Accounts` may come from an old version of the `quasar_derive` crate, try updating your dependency with `cargo update -p quasar_derive`
  = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
  = note: `#[warn(unexpected_cfgs)]` on by default
  = note: this warning originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation panicked: instruction Vec element type must have alignment 1
  --> tests/compile_fail/instruction_vec_alignment.rs:12:1
   |
12 | #[instruction(discriminator = 0)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `bad_vec::_` failed here
